# idleKV

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  TODO.md  main.cc  t.md
.kiro/steering/: product.md  structure.md  tech.md
benchmark/: CMakeLists.txt  README.md  idlekv-get-set-1-1  index_bench.cc  plot_index_bench.py  redis-get-set-1-1  test-cmd.md
benchmark/results/: index_compare.csv  smoke_compare.csv
cmake/: utils.cmake
docs/: ARCHITECTURE.md  ROWE-ART.md  VLL.md  VLL_key_sections_bilingual.md  VLL_reading_notes.md  art_iterator_design.md  art_rank_design.md  build-from-source.md  proposal.md  strict_serializability_with_elle.md  zset_benchmark_plan.md  zset_implementation_plan.md
paper/: paper.aux  paper.bbl  paper.blg  paper.brf  paper.fdb_latexmk  paper.fls  paper.listing  paper.out  paper.tex  paper.toc  paper.xdv  references.bib
paper/_minted-paper/: 84BD4CDF55E12E3A921EA900757249CD0C100D32CD0054980AF0DA8466260C44.pygtex
paper/figure/: 1.draw.io  asio-yield-flow.tex
paper/get_set_benchmark/raw/: idlekv-get-set-1-1.json  idlekv-get-set-1-1.txt  idlekv-get-set-1-3.json  idlekv-get-set-1-3.txt  idlekv-get-set-1-9.json  idlekv-get-set-1-9.txt  idlekv-get-set-9-1.json  idlekv-get-set-9-1.txt  redis-get-set-1-1.json  redis-get-set-1-1.txt  redis-get-set-1-3.json  redis-get-set-1-3.txt  redis-get-set-1-9.json  redis-get-set-1-9.txt  redis-get-set-9-1.json  redis-get-set-9-1.txt
paper/get_set_benchmark/summary/: comparison_summary.csv  summary_long.csv  totals_summary.csv
paper/zset_benchmark/summary/: comparison_summary.csv  totals_summary.csv
scripts/: elle_check.py  gen_flamegraph.sh  gen_history.py  load_kv_dataset.py  plot_get_set_paper.py  plot_get_set_results.py  plot_zset_results.py  resp_kv_bench.go  resp_ping_bench.go  resp_ping_bench.py  resp_zset_bench.go  run_get_set_benchmark.sh  run_zset_benchmark_matrix.sh
scripts/elle/: deps.edn  pom.xml
scripts/elle/examples/: serializability_violation.jsonl  strict_ok.jsonl
scripts/elle/src/idlekv/: elle_check.clj
src/: CMakeLists.txt  banner.h  main.cc
src/common/: asio_no_exceptions.h  config.h  logger.cc  logger.h  result.h
src/db/: client.h  command.h  common.h  context.h  db.cc  db.h  engine.cc  engine.h  hash.cc  info.cc  info.h  list.cc  lock.h  result.h  shard.cc  shard.h  squasher.cc  squasher.h  strings.cc  systemcmd.cc  task_queue.h  transaction.h  txn_queue.h  xmalloc.cc  xmalloc.h
src/db/command/: base.h  hash.cc  list.cc  strings.cc  systemcmd.cc  zset.cc
src/db/index/: art.h  index.h
src/db/storage/: alloctor.cc  alloctor.h  data_entity.h  kvstore.h  object.h  result.h  value.h  wal.h  wal_manager.h  zset.h
src/db/storage/art/: alloctor.h  art.h  art_key.cc  art_key.h  node.cc  node.h
src/db/storage/dash/: READMD.md  bucket.h  dash.h  segment.h
src/index/: art.h  index.h
src/metric/: avg.h  el_pool.h  prometheus.cc  prometheus.h  request_stage.h  task_queue.h
src/redis/: args.h  client.h  command.h  connection.cc  connection.h  error.cc  error.h  handler.cc  handler.h  parser.cc  parser.h  service.cc  service.h  service_interface.h
src/redis/protocol/: error.cc  error.h  parser.cc  parser.h  reply.cc  reply.h  types.cc  types.h
src/redis/type/: base.cc  base.h
src/server/: config.cc  config.h  coro_tracking.h  el_pool.cc  el_pool.h  fiber_runtime.cc  fiber_runtime.h  handler.h  io_pool.h  metrics_service.cc  metrics_service.h  redis_protocol.h  server.cc  server.h  tcp_server.h  thread_state.cc  thread_state.h  xmalloc.cc
src/storage/: snapshot_manager.h  wal_manager.h
src/utils/block_queue/: block_queue.h
src/utils/condition_variable/: condition_variable.h
src/utils/coroutine/: generator.h
src/utils/cpu/: basic.cc  basic.h
src/utils/defer/: defer.h
src/utils/fiber/: block_counter.h  buffered_channel.h  event_count.h  runtime.cc  runtime.h
src/utils/io/: reader.h  writer.hpp
src/utils/pool/: pool.h
src/utils/range/: concat_view.h
src/utils/thread_pool/: thread_pool.h
src/utils/time/: time.cc  time.h
src/utils/timer/: timer.cc  timer.h  timer.hpp
test/: CMakeLists.txt
test/db/: art_test.cc  cmd_args_test.cc  command_test.cc  dash_test.cc  engine_test.cc  info_test.cc  kvstore_test.cc  result_test.cc  task_queue_test.cc  zset_test.cc
test/metric/: avg_test.cc  request_stage_test.cc
test/redis/type/: base_test.cc  parser_test.cc
test/server/: fiber_priority_test.cc
test/utils/: block_counter_test.cc  block_queue_test.cc  buffered_channel_test.cc  concat_view_test.cc  defer_test.cc
third_part/: CMakeLists.txt
third_part/asio/: asio.hpp
third_part/asio/asio/detail/: coro_tracked.hpp
third_part/asio/asio/detail/impl/: io_uring_service.ipp
third_part/asio/asio/impl/: awaitable.hpp  use_awaitable.hpp
